[package]
name = "decide-rs"
description = "Decide which one to choose"
authors = ["yy-tromb"]
license = "MIT"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "string", "unicode"] }
getrandom = "0.3.3"
rand = { version = "0.9.1" , features = ["thread_rng"] }

[profile.dev]
opt-level = 0
lto="off"
strip = "none"

[profile.release]
opt-level = 3
lto = "fat"
strip="debuginfo"
